--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,3 +107,26 @@ table {
 }
 
 #pricingButton { display: none;}
+
+footer {
+    padding: 5em 10em;
+    background-color: #000;
+    @include clearfix;
+
+    .logo {
+        float: none;
+        font-size: 1.5em;
+        border-bottom: 1px solid $main_red;
+    }
+    address {
+        float: left;
+        margin: 1em;
+        p {
+            color: #fff
+        }
+    }
+    .map {
+        float: right;
+        margin: 1em;
+    }
+}
